--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3926ee4e",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f83cecde",
+   "metadata": {},
+   "source": [
+    "#### Add your code below following the instructions given in the course"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f8854bb1",
    "metadata": {},
    "source": [
